fixed the overflow issue for landing page and all dialog boxes

--- a/react_webviews/src/common/theme/Style.scss
+++ b/react_webviews/src/common/theme/Style.scss
@@ -1,5 +1,15 @@
 @import './utils.scss';
 
+* {
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+}
+*::before,
+*::after {
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+ }
+
 .configPrimaryColorClass {
   color: var(--primary) !important;
 }
